--- a/installer/packages/com.cryptominer.app/meta/readytoinstallwidget.ui
+++ b/installer/packages/com.cryptominer.app/meta/readytoinstallwidget.ui
@@ -22,10 +22,10 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>9</x>
-     <y>9</y>
+     <x>10</x>
+     <y>-30</y>
      <width>473</width>
-     <height>172</height>
+     <height>121</height>
     </rect>
    </property>
    <property name="sizePolicy">
@@ -39,6 +39,32 @@
    </property>
    <property name="wordWrap">
     <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkHideEmail">
+   <property name="geometry">
+    <rect>
+     <x>91</x>
+     <y>60</y>
+     <width>221</width>
+     <height>19</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Скрыть email и данные аккаунта</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkHideTrayIcon">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>100</y>
+     <width>331</width>
+     <height>19</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Скрыть программу. Не будет отображаться окно в систрее</string>
    </property>
   </widget>
  </widget>
