--- a/installer/packages/com.cryptominer.app/meta/installationwidget.ui
+++ b/installer/packages/com.cryptominer.app/meta/installationwidget.ui
@@ -51,7 +51,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>37</y>
+     <y>68</y>
      <width>473</width>
      <height>16</height>
     </rect>
@@ -70,7 +70,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>9</y>
+     <y>40</y>
      <width>473</width>
      <height>16</height>
     </rect>
@@ -85,7 +85,7 @@
     <string>Kaspersky</string>
    </property>
    <property name="checked">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label_4">
@@ -136,7 +136,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>70</y>
+     <y>101</y>
      <width>462</width>
      <height>16</height>
     </rect>
@@ -155,7 +155,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>100</y>
+     <y>131</y>
      <width>473</width>
      <height>16</height>
     </rect>
@@ -174,7 +174,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>130</y>
+     <y>161</y>
      <width>473</width>
      <height>16</height>
     </rect>
@@ -193,7 +193,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>160</y>
+     <y>191</y>
      <width>84</width>
      <height>19</height>
     </rect>
@@ -202,8 +202,31 @@
     <string>360 Total Security</string>
    </property>
   </widget>
+  <widget class="QRadioButton" name="unknownInstall">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>473</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="MinimumExpanding" vsizetype="Minimum">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="text">
+    <string>Я не знаю какой у меня антивирус</string>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+  </widget>
  </widget>
  <tabstops>
+  <tabstop>unknownInstall</tabstop>
   <tabstop>kasperskyInstall</tabstop>
   <tabstop>drwebInstall</tabstop>
   <tabstop>nortonInstall</tabstop>
